--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
   <div id="left-main">
     <div id="top">
       <div id="container-1" class="grid-testimonial">
-        <img id="quote"src="/images/bg-pattern-quotation.svg" alt="quote">
+        <img id="quote"src="/images/bg-pattern-quotation.svg" alt="">
         <div class="header">
-        <img src="/images/image-daniel.jpg" alt="danial profile picture">
+        <img src="/images/image-daniel.jpg" alt="">
         <div class="header-txt">
                     <p class="name">Daniel Clifford</p> 
                 <p>Verified Graduate</p> </div></div>
